--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/multer": "^1.4.7",
@@ -49,7 +50,9 @@
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "bcrypt": "^5.1.1",
     "eslint": "^8.0.1",
+    "i": "^0.3.7",
     "jest": "28.0.3",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
